<resources>
    <string name="app_name">Levents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ho_ten">Họ và tên\n</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="open">Open nav admin</string>
    <string name="close">Close nav admin</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
</resources>