<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activity.Register_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="200dp"
            android:src="@drawable/ic_back"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_fpt_polytechnic"/>

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/anh_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="ĐĂNG KÝ"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/edtHoTen"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/ho_ten"/>

    <EditText
        android:id="@+id/edtSoDienThoai"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/so_dien_thoai"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/edtMatKhauRe"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/mat_khau"/>
    <EditText
        android:id="@+id/edtNhapLaiMatKhau"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginBottom="50dp"
        android:hint="@string/nhap_lai_mat_khau"/>

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CBC09A"
        android:text="ĐĂNG KÝ"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        app:cornerRadius="15dp" />

</LinearLayout>