<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Activity.ChangePassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBackChangePass"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="200dp"
            android:src="@drawable/ic_back"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_fpt_polytechnic"/>

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/changepass"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tenDangNhapChangPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edtTenDangNhapChangePass"
            android:layout_width="match_parent"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:hint="@string/ten_dang_nhap"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/soDienThoaiChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edtSoDienThoaiChangePass"
            android:layout_width="match_parent"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:hint="@string/so_dien_thoai"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/matKhauMoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edtMatKhauMoiChangePass"
            android:layout_width="match_parent"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:hint="@string/mat_khau_moi"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nhapLaiMatKhauChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black">
        <EditText
            android:id="@+id/edtNhapLaiMatKhauChangePass"
            android:layout_width="match_parent"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:hint="@string/nhap_lai_mat_khau"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDoiMatKhau"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="ĐỔI MẬT KHẨU"/>
</LinearLayout>